add jupyter docs